# CI_test

./: .travis.yml
demo_map_markers/: CMakeLists.txt  package.xml
demo_map_markers/config/: coords.yaml
demo_map_markers/include/demo_map_markers/: demo_map_markers.h
demo_map_markers/launch/: demo_map_markers.launch
demo_map_markers/src/: demo_map_markers.cpp  main.cpp
waypoint_writer/: CMakeLists.txt  package.xml
waypoint_writer/config/: waypoints.txt  waypoints.txt.bak  waypoints_gtri.txt  waypoints_old_good_run.txt  waypoints_route_1.txt  waypoints_route_2.txt
waypoint_writer/include/waypoint_writer/: waypoint_writer.h
waypoint_writer/launch/: waypoint_writer.launch
waypoint_writer/src/: main.cpp  waypoint_writer.cpp
