<?xml version="1.0"?>
<package format="2">
  <name>waypoint_writer</name>
  <version>0.0.0</version>
  <description>The waypoint_writer package</description>

  <maintainer email="mmarcum@todo.todo">mmarcum</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roslib</depend>

</package>
